@@ -12,6 +12,12 @@ DISABLE_CONF=custom_error.conf block_files.conf
 #AV_HOST=av-test.encircle.technology
 #AV_PORT=443
 
+# Wordpress CiviCRM
+TITLE=example
+ADMIN_USER=admin
+ADMIN_PASSWORD=password
+ADMIN_EMAIL=mpage@encircle.co.uk
+
 # Database
 ROOT_PASS=password
 DB_NAME=testle
